# netbox-rpc

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.gitea/: mirror-verified
.gitea/workflows/: ci.yml  deploy-production.yml  integration.yml  mirror-github.yml  publish-pypi.yml
.github/workflows/: test.yml
docs/: MINECRAFT_STACK_RPC.md  architecture.md  command-templating.md  dispatch-lease.md  intents.md  passbolt-migration-runbook.md  rpc-generated-core-jobs.md  transport-and-parsing-selection.md
netbox_rpc/: __init__.py  backends.py  capabilities.py  command_contract.py  command_templating.py  constants.py  dispatch_lease.py  event_store.py  filtersets.py  forms.py  health.py  jobs.py  models.py  navigation.py  packer_normalizer.py  tables.py  urls.py  views.py
netbox_rpc/api/: serializers.py  urls.py  views.py
netbox_rpc/application/: __init__.py  command_handlers.py  queries.py
netbox_rpc/domain/: __init__.py  aggregate.py  events.py  normalization.py  projection.py  value_objects.py
netbox_rpc/migrations/: 0001_initial.py  0002_seed_initial_procedures.py  0003_seed_nginx_procedures.py  0004_seed_systemd_management_procedures.py  0005_allowlist_ssh_credential_override.py  0006_seed_ssh_install_procedure.py  0007_rename_netbox_rpc_assigned_idx_netbox_rpc__assigne_c5b587_idx_and_more.py  0008_seed_convert_mellanox_nic_to_ethernet_procedure.py  0009_seed_dell_os10_procedures.py  0010_mellanox_bond_params_schema.py  0011_seed_dell_os10_vlt_procedures.py  0012_seed_dell_os10_port_channel_procedures.py  0012_seed_packer_procedures.py  0012_seed_proxmox_qemu_vm_lifecycle.py  0013_add_proxmox_qemu_agent_network_interfaces.py  0013_seed_dell_os10_breakout_procedure.py  0014_add_proxmox_qemu_debian_network_repair.py  0014_seed_dell_os10_fec_procedure.py  0015_add_proxmox_qemu_guest_password.py  0015_update_vlt_domain_and_lacp_schemas.py  0016_add_proxmox_qemu_dns_defaults.py  0016_seed_pterodactyl_procedures.py  0017_add_proxmox_qemu_nextid.py  0017_seed_allow_third_party_optical_modules.py  0018_add_proxmox_qemu_pbs_zabbix.py  0018_seed_packer_procedures.py  0019_seed_proxmox_qemu_vm_lifecycle.py  0020_add_proxmox_qemu_agent_network_interfaces.py  0021_add_proxmox_qemu_debian_network_repair.py  0022_add_proxmox_qemu_guest_password.py  0023_add_proxmox_qemu_dns_defaults.py  0024_add_proxmox_qemu_nextid.py  0025_add_proxmox_qemu_pbs_zabbix.py  0026_merge_packer_and_proxmox.py  0027_seed_dns_host_procedures.py  (+36 more)
tests/: test_aggregate_invariants.py  test_approval_domain.py  test_backend_health.py  test_backends_resolver.py  test_command_contract.py  test_command_templating.py  test_domain_events.py  test_influxdb_service_allowlist_seed.py  test_jobs_dell_os10_normalization.py  test_jobs_dell_os10_port_channel_normalization.py  test_jobs_dell_os10_vlt_normalization.py  test_jobs_dns_host_normalization.py  test_jobs_driver_fields_normalization.py  test_jobs_linux_agent_install_normalization.py  test_jobs_mellanox_normalization.py  test_jobs_minecraft_normalization.py  test_jobs_packer_normalization.py  test_jobs_passbolt_migration_normalization.py  test_jobs_pipeline_exemplar_normalization.py  test_jobs_proxmox_qemu_lifecycle_normalization.py  test_jobs_proxmox_show_systemctl_services_normalization.py  test_jobs_pterodactyl_normalization.py  test_jobs_samba_normalization.py  test_jobs_ssh_normalization.py  test_jobs_systemd_normalization.py  test_nmap_scan_procedure.py  test_ookla_normalization.py  test_optin_settings_contract.py  test_projection_fold.py  test_queries.py  test_settings_api_contract.py  test_static_contract.py  test_target_object_snapshot.py  test_value_objects.py
(+31 files in other folders)
