[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-rpc"
version = "0.1.6"
requires-python = ">=3.12.0"
dependencies = [
    "jsonschema>=4.0",
    "requests>=2.32",
    # Jinja2 backs command-template validation (render_mode="jinja"). NetBox
    # already ships it; declared explicitly so standalone/CI installs have it.
    "Jinja2>=3.1",
]
authors = [
    {name = "Emerson Felipe", email = "emerson.felipe@nmultifibra.com.br"},
]
description = "Audited RPC procedure catalog & execution framework for NetBox"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
nms = ["netbox-nms>=0.1.8,<0.2.0"]
# Integration/DB-backed test deps: the netbox_rpc/tests/ suite exercises the
# dispatch-lease (cryptography ed25519) + capability-handshake (pydantic v2)
# code paths. These are ambient on a full NetBox install but absent in a
# minimal netbox-rpc-only environment (e.g. the integration.yml compatibility
# matrix), so declare them here and install with `-e .[test]` in CI.
test = ["pydantic>=2.0", "cryptography>=42.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_rpc*"]

[tool.setuptools.package-data]
# include-package-data only picks up VCS/MANIFEST-tracked files for sdists;
# wheels need the template globs declared explicitly or /plugins/rpc/ fails
# with TemplateDoesNotExist on non-editable installs.
netbox_rpc = ["templates/netbox_rpc/*.html"]

[tool.pytest.ini_options]
# Put the repository root on sys.path so `pytest tests/` (the console-script
# invocation used by CI) can import the in-tree `netbox_rpc` package without an
# editable install. Without this, CI collection fails with
# "ModuleNotFoundError: No module named 'netbox_rpc'".
pythonpath = ["."]
testpaths = ["tests"]
